--- a/cart.html
+++ b/cart.html
@@ -88,7 +88,7 @@
             <table>
                 <tr>
                     <td>Cart Subtotal</td>
-                    <td>$ 335</td>
+                    <td id="total">$ 0</td>
                 </tr>
                 <tr>
                     <td>Shipping</td>
@@ -96,7 +96,7 @@
                 </tr>
                 <tr>
                     <td><strong>Total</strong></td>
-                    <td><strong>$ 335</strong></td>
+                    <td id="total2"><strong>$0</strong></td>
                 </tr>
             </table>
             <button class="normal">Proceed To Checkout</button>
